--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,7 +25,7 @@
   </div>
 
   <div padding class="center">
-    <ion-label style="color:white; font-size: 16px" floating>Políticas de uso</ion-label>
-    <ion-label style="color:white; font-size: 16px" floating>Privacidad de la información</ion-label>
+    <ion-label (click)= "navPoliPage()" style="color:white; font-size: 16px" floating>Políticas de uso</ion-label>
+    <ion-label (click)= "presentToast2()" style="color:white; font-size: 16px" floating>Privacidad de la información</ion-label>
   </div>
 </ion-content>
