--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
   <ion-list>
 
     <ion-item style="border-radius:10px">
-      <ion-label floating>USUARIO</ion-label>
+      <ion-label floating>EMAIL</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
@@ -20,7 +20,7 @@
   <div class="center">
     <button class="buttonBackground" ion-button small>INGRESAR</button>
   </div>
-  <div (click)="navRegister()"  padding class="center">
+  <div (click)="navRegPhone()"  padding class="center">
     <ion-label style="color:white;  font-size:16px">Registrarse</ion-label>
   </div>
 
