--- a/src/pages/pinlock/pinlock.html
+++ b/src/pages/pinlock/pinlock.html
@@ -8,8 +8,8 @@
 
   <div style="margin-top:10%" class="center">
     <ion-list>
-      <ion-item style="border-radius:10px; color: white; background: transparent; border-radius: 10px; text-align: center;">
-        <ion-input placeholder="Introduce el coódigo" maxlength="6" required style="text-align: center" type="text"></ion-input>
+      <ion-item class="vignette"  style="border-radius:10px; color: white; background: transparent; border-radius: 10px; text-align: center;">
+        <ion-input placeholder="Introduce el coódigo" maxlength="6" required style="text-align: center; " type="text"></ion-input>
       </ion-item>
     </ion-list>
   </div>
@@ -58,7 +58,7 @@
         <button style="font-size: x-large" ion-button>0</button>
       </ion-col>
       <ion-col col-4>
-        <button style="font-size: xx-large; background:transparent; color: white" ion-button icon-start>
+        <button style="font-size: xx-large; background:transparent; color: white; " ion-button icon-start>
           <ion-icon name="ios-backspace"></ion-icon>
         </button>
       </ion-col>
