--- a/src/pages/reg-number-phone/reg-number-phone.html
+++ b/src/pages/reg-number-phone/reg-number-phone.html
@@ -1,6 +1,6 @@
-<ion-content [ngStyle]="{'background-image':'url('+imagen+')'}">
+<ion-content class="imgBackground vignette">
   <div style="margin-top:12%" class="center">
-    <ion-img style="margin-bottom: 10%;" class="logo" src="assets/imgs/EPCLogoPpal.png"></ion-img>
+    <ion-img style="margin-bottom: 10%;" class="logo" src="assets/imgs/EPCLogo.png"></ion-img>
     <div class="center">
       <ion-label style="color:white" class="center"> Enviaremos un CÓDIGO de verificación a el número<br> que registres
         a continuación.
@@ -8,8 +8,8 @@
     </div>
   </div>
 
-  <div style="margin-top:10%" class="center">
-    <ion-grid class="center">
+  <div class="center divMargin">
+    <ion-grid class="center marGrid">
       <ion-row>
         <ion-col col-5>
           <ion-item class="item-flag item-md2 item-ios2">
@@ -19,7 +19,7 @@
           </ion-item>
         </ion-col>
         <ion-col col-7>
-          <ion-item style="border-radius:10px; width: 122%; margin-left: -20%">
+          <ion-item class="stylCel">
             <ion-input required type="text" name="numerocelular" [(ngModel)]="user_register.value" placeholder="Número movil (celular)"></ion-input>
           </ion-item>
         </ion-col>
@@ -30,11 +30,11 @@
         [(ngModel)]="code_verify"></ion-input>
     </ion-item>
   </div>
-  <div class="center">
-    <button style="border-radius: 0" class="buttonPayCash" (click)="cancel()" ion-button small>Cancelar</button>
-    <button style="border-radius: 0" class="buttonPayCash" (click)="sendNumberPhone()" ion-button small *ngIf="response_verify.phone_code == null">Enviar
+  <div class="center marginBts">
+    <button class="buttonPayCash borderBtns" (click)="cancel()" ion-button small>Cancelar</button>
+    <button class="buttonPayCash borderBtns" (click)="sendNumberPhone()" ion-button small *ngIf="response_verify.phone_code == null">Enviar
     </button>
-    <button style="border-radius: 0" class="buttonPayCash" (click)="verifyCode()" ion-button small *ngIf="response_verify.phone_code != null">Continuar
+    <button class="buttonPayCash borderBtns" (click)="verifyCode()" ion-button small *ngIf="response_verify.phone_code != null">Continuar
     </button>
   </div>
 
