--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the AccountPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Eyepaycash
+        CUENTA
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -15,7 +9,7 @@
   <ion-card>
     <ion-card-header>
       <ion-icon name="person" item-start></ion-icon>
-      Informaciòn personal
+      Información personal
     </ion-card-header>
     <ion-card-content>
       <ion-list>
@@ -43,7 +37,7 @@
   <ion-card>
     <ion-card-header>
       <ion-icon name="key" item-start></ion-icon>
-      Informaciòn de cuenta
+      Información de cuenta
     </ion-card-header>
     <ion-card-content>
       <ion-row>
@@ -51,7 +45,7 @@
         {{usuario.mail}}
       </ion-row>
       <ion-row>
-        <ion-label stacked>Telèfono</ion-label>
+        <ion-label stacked>Teléfono</ion-label>
         {{usuario.phone}}
       </ion-row>
     </ion-card-content>
@@ -59,23 +53,23 @@
   <ion-card>
     <ion-card-header>
       <ion-icon name="locate" item-start></ion-icon>
-      Informaciòn de ubicaciòn
+      Información de ubicaciòn
     </ion-card-header>
     <ion-card-content>
       <ion-row>
-        <ion-label stacked>Paìs</ion-label>
+        <ion-label stacked>País</ion-label>
         {{country.name}}
       </ion-row>
       <ion-row>
-        <ion-label stacked>Còdigo de telèfono</ion-label>
+        <ion-label stacked>Código de teléfono</ion-label>
         {{country.phone_code}}
       </ion-row>
       <ion-row>
-        <ion-label stacked>Còdigo de paìs</ion-label>
+        <ion-label stacked>Código de país</ion-label>
         {{country.country_code}}
       </ion-row>
       <ion-row>
-        <ion-label stacked>Moneda del paìs</ion-label>
+        <ion-label stacked>Moneda del país</ion-label>
         {{country.currency}}
       </ion-row>
     </ion-card-content>
@@ -85,13 +79,13 @@
   <ion-card>
     <ion-card-header>
       <ion-icon name="lock" item-start></ion-icon>
-      Informaciòn de seguridad
+      Información de seguridad
     </ion-card-header>
     <ion-card-content>
       <div *ngIf="isphone">
         <ion-row>
 
-          <label stacked>Seleccione el paìs e ingrese su nuevo nùmero celular</label>
+          <label stacked>Seleccione el país e ingrese su nuevo número celular</label>
           <ion-col col-4>
             <ion-item class="item-flag">
               <img [src]="infoPhone.flag" class="flagphone" *ngIf="infoPhone.flag !=null">
@@ -104,31 +98,31 @@
           </ion-col>
 
           <ion-col col-12 *ngIf="response_verify.phone_code != null">
-            <label stacked>Por favor ingrese el còdigo de verificaciòn</label>
+            <label stacked>Por favor ingrese el código de verificación</label>
             <ion-input name="verifycode" [(ngModel)]="codeVerify"></ion-input>
-            <button class="buttonPayCash" (click)="verifyCode()" ion-button block>Verificar còdigo</button>
+            <button class="buttonPayCash" (click)="verifyCode()" ion-button block>Verificar código</button>
           </ion-col>
         </ion-row>
-        <button ion-button block class="buttonPayCash" (click)="changePhone()" *ngIf="response_verify.phone_code==null">Actualizar nùmero celular</button>
-        <button ion-button block class="buttonPayCash" (click)="pedirMail()">Cambiar direcciòn email</button>
+        <button ion-button block class="buttonPayCash" (click)="changePhone()" *ngIf="response_verify.phone_code==null">Actualizar número celular</button>
+        <button ion-button block class="buttonPayCash" (click)="pedirMail()">Cambiar dirección email</button>
       </div>
 
 
       <div *ngIf="ismail">
         <ion-row>
-          <label stacked> Por favor ingrese la nueva direcciòn email</label>
+          <label stacked> Por favor ingrese la nueva dirección email</label>
           <ion-col col-12 row>
             <ion-input name="correoelectronico" [(ngModel)]="infoPhone.value" placeholder="Direcciòn email correo electrònico"></ion-input>
           </ion-col>
           <ion-col col-12 *ngIf="response_verify.mail_code != null">
-            <label stacked>Por favor ingrese el còdigo de verificaciòn</label>
+            <label stacked>Por favor ingrese el código de verificación</label>
             <br>
             <ion-input name="verifycode" [(ngModel)]="codeVerifyMail"></ion-input>
-            <button class="buttonPayCash" (click)="verifyCodeMail()" ion-button block>Verificar còdigo</button>
+            <button class="buttonPayCash" (click)="verifyCodeMail()" ion-button block>Verificar código</button>
           </ion-col>
         </ion-row>
-        <button ion-button block class="buttonPayCash" (click)="changeMail()" *ngIf="response_verify.mail_code==null">Actualizar direcciòn email</button>
-        <button ion-button block class="buttonPayCash" (click)="pedirPhone()">Cambiar nùmero celular</button>
+        <button ion-button block class="buttonPayCash" (click)="changeMail()" *ngIf="response_verify.mail_code==null">Actualizar dirección email</button>
+        <button ion-button block class="buttonPayCash" (click)="pedirPhone()">Cambiar número celular</button>
       </div>
     </ion-card-content>
   </ion-card>
