--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,7 +1,13 @@
+<!--
+  Generated template for the AccountPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
   <ion-navbar>
     <ion-title>
-        CUENTA
+      Eyepaycash
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -9,7 +15,7 @@
   <ion-card>
     <ion-card-header>
       <ion-icon name="person" item-start></ion-icon>
-      Información personal
+      Informaciòn personal
     </ion-card-header>
     <ion-card-content>
       <ion-list>
@@ -37,7 +43,7 @@
   <ion-card>
     <ion-card-header>
       <ion-icon name="key" item-start></ion-icon>
-      Información de cuenta
+      Informaciòn de cuenta
     </ion-card-header>
     <ion-card-content>
       <ion-row>
@@ -45,7 +51,7 @@
         {{usuario.mail}}
       </ion-row>
       <ion-row>
-        <ion-label stacked>Teléfono</ion-label>
+        <ion-label stacked>Telèfono</ion-label>
         {{usuario.phone}}
       </ion-row>
     </ion-card-content>
@@ -53,23 +59,23 @@
   <ion-card>
     <ion-card-header>
       <ion-icon name="locate" item-start></ion-icon>
-      Información de ubicaciòn
+      Informaciòn de ubicaciòn
     </ion-card-header>
     <ion-card-content>
       <ion-row>
-        <ion-label stacked>País</ion-label>
+        <ion-label stacked>Paìs</ion-label>
         {{country.name}}
       </ion-row>
       <ion-row>
-        <ion-label stacked>Código de teléfono</ion-label>
+        <ion-label stacked>Còdigo de telèfono</ion-label>
         {{country.phone_code}}
       </ion-row>
       <ion-row>
-        <ion-label stacked>Código de país</ion-label>
+        <ion-label stacked>Còdigo de paìs</ion-label>
         {{country.country_code}}
       </ion-row>
       <ion-row>
-        <ion-label stacked>Moneda del país</ion-label>
+        <ion-label stacked>Moneda del paìs</ion-label>
         {{country.currency}}
       </ion-row>
     </ion-card-content>
@@ -79,13 +85,13 @@
   <ion-card>
     <ion-card-header>
       <ion-icon name="lock" item-start></ion-icon>
-      Información de seguridad
+      Informaciòn de seguridad
     </ion-card-header>
     <ion-card-content>
       <div *ngIf="isphone">
         <ion-row>
 
-          <label stacked>Seleccione el país e ingrese su nuevo número celular</label>
+          <label stacked>Seleccione el paìs e ingrese su nuevo nùmero celular</label>
           <ion-col col-4>
             <ion-item class="item-flag">
               <img [src]="infoPhone.flag" class="flagphone" *ngIf="infoPhone.flag !=null">
@@ -98,31 +104,31 @@
           </ion-col>
 
           <ion-col col-12 *ngIf="response_verify.phone_code != null">
-            <label stacked>Por favor ingrese el código de verificación</label>
+            <label stacked>Por favor ingrese el còdigo de verificaciòn</label>
             <ion-input name="verifycode" [(ngModel)]="codeVerify"></ion-input>
-            <button class="buttonPayCash" (click)="verifyCode()" ion-button block>Verificar código</button>
+            <button class="buttonPayCash" (click)="verifyCode()" ion-button block>Verificar còdigo</button>
           </ion-col>
         </ion-row>
-        <button ion-button block class="buttonPayCash" (click)="changePhone()" *ngIf="response_verify.phone_code==null">Actualizar número celular</button>
-        <button ion-button block class="buttonPayCash" (click)="pedirMail()">Cambiar dirección email</button>
+        <button ion-button block class="buttonPayCash" (click)="changePhone()" *ngIf="response_verify.phone_code==null">Actualizar nùmero celular</button>
+        <button ion-button block class="buttonPayCash" (click)="pedirMail()">Cambiar direcciòn email</button>
       </div>
 
 
       <div *ngIf="ismail">
         <ion-row>
-          <label stacked> Por favor ingrese la nueva dirección email</label>
+          <label stacked> Por favor ingrese la nueva direcciòn email</label>
           <ion-col col-12 row>
             <ion-input name="correoelectronico" [(ngModel)]="infoPhone.value" placeholder="Direcciòn email correo electrònico"></ion-input>
           </ion-col>
           <ion-col col-12 *ngIf="response_verify.mail_code != null">
-            <label stacked>Por favor ingrese el código de verificación</label>
+            <label stacked>Por favor ingrese el còdigo de verificaciòn</label>
             <br>
             <ion-input name="verifycode" [(ngModel)]="codeVerifyMail"></ion-input>
-            <button class="buttonPayCash" (click)="verifyCodeMail()" ion-button block>Verificar código</button>
+            <button class="buttonPayCash" (click)="verifyCodeMail()" ion-button block>Verificar còdigo</button>
           </ion-col>
         </ion-row>
-        <button ion-button block class="buttonPayCash" (click)="changeMail()" *ngIf="response_verify.mail_code==null">Actualizar dirección email</button>
-        <button ion-button block class="buttonPayCash" (click)="pedirPhone()">Cambiar número celular</button>
+        <button ion-button block class="buttonPayCash" (click)="changeMail()" *ngIf="response_verify.mail_code==null">Actualizar direcciòn email</button>
+        <button ion-button block class="buttonPayCash" (click)="pedirPhone()">Cambiar nùmero celular</button>
       </div>
     </ion-card-content>
   </ion-card>
