--- a/src/pages/transaction/transaction.html
+++ b/src/pages/transaction/transaction.html
@@ -1,11 +1,20 @@
+<!--
+  Generated template for the TransactionPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
-    <ion-title>TRANSACCIONES</ion-title>
+    <ion-title>EYEPAYCASH</ion-title>
   </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
-  <ion-label class="txtLbl" stacked>Seleccione país de interés</ion-label>
+  <ion-label stacked>Seleccione paìs de interès</ion-label>
   <ion-select [(ngModel)]="currency" (ionChange)="countrySelected()">
     <ion-option *ngFor="let pais of countrys" value="{{pais.currency}}">{{pais.name}}</ion-option>
   </ion-select>
@@ -15,25 +24,18 @@
     <ion-card-content>
       <label stacked>Precio del dolar en el paìs</label>
       <ion-item>
-        <h6>1 USD = {{infoCountry?.local_usd_value}} {{currency}}</h6>
+        <h6>1 USD = {{infoCountry?.local_usd_value | number}} {{currency}}</h6>
       </ion-item>
-      <label stacked>Información de las monedas</label>
-
+      <label stacked>Informaciòn de las monedas</label>
       <button ion-item *ngFor="let moneda of monedas" (click)="monedaSelect(moneda)">
-        <ion-row>
-          <ion-col col-10>
-            <h4>Nombre: {{moneda.full_name}}</h4>
-            <h6>1 {{moneda.full_name}} = {{moneda.usd_value}} USD</h6>
-            <h5 stacked> 1 {{moneda.full_name}} >> {{currency}} </h5>
-            <h5>{{moneda.local_usd_value}}</h5>
-          </ion-col>
-          <ion-col col-2 class="margIcon">
-            <ion-icon  name="add"></ion-icon>
-          </ion-col>
-        </ion-row>
+        <h4>Nombre: {{moneda.full_name}}</h4>
+        <h6>1 {{moneda.full_name}} = {{moneda.usd_value | number}} USD</h6>
+        <h5 stacked> 1 {{moneda.full_name}} >> {{currency}}  </h5>
+        <h5>{{moneda.local_usd_value | number}}</h5>
         <hr>
       </button>
-
     </ion-card-content>
   </ion-card>
+
+
 </ion-content>
