--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,14 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
+  <base href="/">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
-  <script src="cordova.js"></script>
+  <script src="cordova.js" type="text/javascript"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
@@ -27,7 +28,7 @@
     }
   </script>-->
 
-  <link href="build/main.css" rel="stylesheet">
+  <link href="build/main.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -36,14 +37,14 @@
   <ion-app></ion-app>
 
   <!-- The polyfills js is generated during the build process -->
-  <script src="build/polyfills.js"></script>
+  <script src="build/polyfills.js" type="text/javascript"></script>
 
   <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
-  <script src="build/vendor.js"></script>
+  <script src="build/vendor.js" type="text/javascript"></script>
 
   <!-- The main bundle js is generated during the build process -->
-  <script src="build/main.js"></script>
+  <script src="build/main.js" type="text/javascript"></script>
 
 </body>
 </html>
