--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -14,7 +14,11 @@
 
 
 <ion-content padding>
-
-  
-
+  <ion-list>
+    <ion-item *ngFor="let transaction of transactions">
+      <h2>My Neighbor Totoro</h2>
+      <p>Hayao Miyazaki • 1988</p>
+      <button ion-button clear item-end>View</button>
+    </ion-item>
+  </ion-list>
 </ion-content>
